# nonogram-solver

./: .gitmodules  CMakeLists.txt  README.md
src/: controls.cpp  controls.h  image.cpp  image.h  main.cpp  screen.cpp  screen.h  screen_handler.cpp  screen_handler.h
